--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
 	"name": "authme",
-	"version": "2.0.0",
+	"version": "2.1.0",
 	"description": "A simple 2FA app for desktop built with Electron and Node.js.",
 	"main": "main.js",
 	"scripts": {
 		"start": "electron .",
 		"package": "electron-packager . Authme --platform=win32,linux --arch=x64 --icon=img/icon.icns --out=build --overwrite",
-		"build": "electron-builder"
+		"build": "electron-builder",
+		"lint": "eslint --fix."
 	},
 	"build": {
 		"productName": "Authme",
@@ -43,7 +44,16 @@
 	"devDependencies": {
 		"electron": "^11.0.3",
 		"electron-builder": "^22.9.1",
-		"electron-packager": "^15.0.0"
+		"electron-packager": "^15.0.0",
+		"eslint": "^7.15.0",
+		"eslint-config-node": "^4.1.0",
+		"eslint-config-prettier": "^7.0.0",
+		"eslint-config-promise": "^2.0.2",
+		"eslint-config-standard": "^16.0.2",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^3.2.0",
+		"eslint-plugin-promise": "^4.2.1",
+		"prettier": "^2.2.1"
 	},
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
