fix windows workflow

--- a/.github/workflows/artifacts-windows.yml
+++ b/.github/workflows/artifacts-windows.yml
@@ -6,10 +6,10 @@ on:
 
 jobs:
     archive-build-artifacts:
-        runs-on: ubuntu-latest
+        runs-on: windows-latest
         steps:
             - uses: actions/checkout@v2
-            
+
             - name: Install modules
               run: npm i
 
