--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "authme",
-	"version": "2.1.4",
+	"version": "2.2.0",
 	"description": "A simple 2FA app for desktop built with Electron and Node.js.",
 	"main": "main.js",
 	"scripts": {
 		"start": "electron .",
-		"package": "electron-packager . Authme --platform=win32,linux --arch=x64 --icon=img/icon.icns --out=build --overwrite",
-		"build": "electron-builder --publish=never",
+		"package": "electron-packager . Authme --platform=win32,linux,darwin --arch=x64 --icon=img/icon.icns --out=build --overwrite",
+		"build": "electron-builder --publish=never --x64",
 		"lint": "eslint --fix."
 	},
 	"build": {
@@ -48,16 +48,16 @@
 	"author": "Levminer",
 	"license": "MIT",
 	"devDependencies": {
-		"electron": "^11.1.1",
+		"electron": "^11.2.0",
 		"electron-builder": "^22.9.1",
 		"electron-packager": "^15.2.0",
-		"eslint": "^7.16.0",
+		"eslint": "^7.17.0",
 		"eslint-config-node": "^4.1.0",
 		"eslint-config-prettier": "^7.1.0",
 		"eslint-config-promise": "^2.0.2",
 		"eslint-config-standard": "^16.0.2",
 		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-prettier": "^3.3.0",
+		"eslint-plugin-prettier": "^3.3.1",
 		"eslint-plugin-promise": "^4.2.1",
 		"eslint-plugin-standard": "^5.0.0",
 		"prettier": "^2.2.1"
@@ -67,6 +67,8 @@
 		"bcryptjs": "^2.4.3",
 		"create-desktop-shortcuts": "^1.2.0",
 		"cryptr": "^6.0.2",
+		"electron-debug": "^3.2.0",
+		"electron-util": "^0.14.2",
 		"jimp": "^0.16.1",
 		"node-fetch": "^2.6.1",
 		"qrcode": "^1.4.4",
