--- a/.github/workflows/mac-artifacts.yml
+++ b/.github/workflows/mac-artifacts.yml
@@ -11,7 +11,7 @@ jobs:
             - uses: actions/checkout@v2
 
             - name: Install modules
-              run: npm ci
+              run: npm i
 
             - name: Run Build
               run: npm run build
