--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
 	"name": "authme",
-	"version": "2.3.2",
+	"version": "2.4.0",
 	"description": "A simple 2FA app for desktop built with Electron and Node.js.",
-	"main": "main.js",
+	"author": "Levminer",
+	"license": "GPL-3.0",
 	"scripts": {
 		"start": "electron .",
 		"package": "electron-packager . Authme --platform=win32,linux,darwin --arch=x64 --icon=img/icon.icns --out=build --overwrite",
 		"build": "electron-builder --publish=never --x64",
-		"lint": "eslint --fix ."
+		"lint": "eslint --fix .",
+		"eslint": "eslint ."
 	},
+	"main": "main.js",
 	"build": {
 		"productName": "Authme",
 		"appId": "com.levminer.authme",
-		"asar": false,
+		"asar": true,
+		"asarUnpack": "app/import/src/py/*",
 		"win": {
 			"target": [
 				"nsis"
@@ -39,33 +43,30 @@
 			"category": "public.app-category.utilities"
 		}
 	},
-	"author": "Levminer",
-	"license": "MIT",
-	"devDependencies": {
-		"electron": "^12.0.2",
-		"electron-builder": "^22.10.5",
-		"electron-packager": "^15.2.0",
-		"eslint": "^7.23.0",
-		"eslint-config-node": "^4.1.0",
-		"eslint-config-prettier": "^8.1.0",
-		"eslint-config-promise": "^2.0.2",
-		"eslint-config-standard": "^16.0.2",
-		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-prettier": "^3.3.1",
-		"eslint-plugin-promise": "^4.3.1",
-		"eslint-plugin-standard": "^5.0.0",
-		"prettier": "^2.2.1"
-	},
 	"dependencies": {
 		"@levminer/speakeasy": "^1.2.0",
+		"auto-launch": "^5.0.5",
 		"bcryptjs": "^2.4.3",
-		"create-desktop-shortcuts": "^1.4.0",
 		"cryptr": "^6.0.2",
 		"electron-debug": "^3.2.0",
 		"electron-util": "^0.14.2",
-		"jimp": "^0.16.1",
 		"node-fetch": "^2.6.1",
 		"qrcode": "^1.4.4",
-		"qrcode-reader": "^1.0.4"
+		"qrcode-decoder": "0.1.2"
+	},
+	"devDependencies": {
+		"electron": "^12.0.5",
+		"electron-builder": "^22.10.5",
+		"electron-packager": "^15.2.0",
+		"eslint": "^7.24.0",
+		"eslint-config-node": "^4.1.0",
+		"eslint-config-prettier": "^8.2.0",
+		"eslint-config-promise": "^2.0.2",
+		"eslint-config-standard": "^16.0.2",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^3.4.0",
+		"eslint-plugin-promise": "^4.3.1",
+		"eslint-plugin-standard": "^5.0.0",
+		"prettier": "^2.2.1"
 	}
 }
