--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 		},
 		"linux": {
 			"target": "deb",
-			"icon": "img/icon.png",
+			"icon": "img/icon256x256.png",
 			"maintainer": "levminer@levminer.com"
 		},
 		"mac": {
