--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
 		],
 		"win": {
 			"target": [
-				"nsis"
+				"nsis",
+				"zip"
 			],
-			"icon": "img/icon.ico"
+			"icon": "img/icon.ico",
+			"artifactName": "authme-${version}-windows-x64-portable.zip"
 		},
 		"nsis": {
 			"installerIcon": "img/icon.ico",
@@ -34,26 +36,37 @@
 			"license": "LICENSE.md",
 			"oneClick": false,
 			"allowToChangeInstallationDirectory": true,
-			"createDesktopShortcut": "always"
+			"createDesktopShortcut": "always",
+			"artifactName": "authme-${version}-windows-x64-installer.exe"
 		},
 		"linux": {
-			"target": "deb",
+			"target": [
+				"deb",
+				"zip"
+			],
 			"maintainer": "levminer@levminer.com",
-			"icon": "img/icon.png"
+			"icon": "img/icon.png",
+			"category": "Utility",
+			"desktop": {
+				"Name": "Authme",
+				"Type": "Application"
+			},
+			"artifactName": "authme-${version}-linux-x64-portable.zip"
 		},
 		"deb": {
-			"depends": [
-				"libnotify4",
-				"libxtst6",
-				"libnss3",
-				"libsecret-1-0",
-				"libxss1"
-			]
+			"artifactName": "authme-${version}-linux-x64-installer.deb"
 		},
 		"mac": {
-			"target": "dmg",
+			"target": [
+				"dmg",
+				"zip"
+			],
 			"icon": "img/icon.icns",
-			"category": "public.app-category.utilities"
+			"category": "public.app-category.utilities",
+			"artifactName": "authme-${version}-mac-x64-portable.zip"
+		},
+		"dmg": {
+			"artifactName": "authme-${version}-mac-x64-installer.dmg"
 		}
 	},
 	"dependencies": {
