--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "authme",
-	"version": "2.4.2",
+	"version": "2.4.3",
 	"description": "A simple 2FA app for desktop built with Electron and Node.js.",
 	"author": "Levminer",
 	"license": "GPL-3.0",
@@ -9,13 +9,14 @@
 		"package": "electron-packager . Authme --platform=win32,linux,darwin --arch=x64 --icon=img/icon.icns --out=build --overwrite",
 		"build": "electron-builder --publish=never --x64",
 		"lint": "eslint --fix .",
-		"eslint": "eslint ."
+		"eslint": "eslint .",
+		"webpack": "webpack"
 	},
 	"main": "main.js",
 	"build": {
 		"productName": "Authme",
 		"appId": "com.levminer.authme",
-		"asar": true,
+		"asar": false,
 		"asarUnpack": [
 			"app/import/src/py/*",
 			"src/install.py",
@@ -81,17 +82,17 @@
 		"qrcode-decoder": "0.1.2"
 	},
 	"devDependencies": {
-		"electron": "^12.0.7",
+		"electron": "^13.0.1",
 		"electron-builder": "^22.10.5",
 		"electron-packager": "^15.2.0",
-		"eslint": "^7.26.0",
+		"eslint": "^7.27.0",
 		"eslint-config-node": "^4.1.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-config-promise": "^2.0.2",
-		"eslint-config-standard": "^16.0.2",
+		"eslint-config-standard": "^16.0.3",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-prettier": "^3.4.0",
-		"eslint-plugin-promise": "^4.3.1",
+		"eslint-plugin-promise": "^5.1.0",
 		"eslint-plugin-standard": "^5.0.0",
 		"prettier": "^2.3.0"
 	}
