--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
 		"start": "electron .",
 		"package": "electron-packager . Authme --platform=win32,linux,darwin --arch=x64 --icon=img/icon.icns --out=build --overwrite",
 		"build": "electron-builder --publish=never --x64",
+		"build:df": "sass src/dragonfly@1.4.0.scss src/dragonfly@1.4.0.css --no-source-map",
+		"build:tw": "tailwindcss build src/tailwind@2.1.2.scss -o src/tailwind@2.1.2.css -c .tailwindrc.js --no-autoprefixer",
 		"lint": "eslint --fix .",
-		"eslint": "eslint .",
-		"webpack": "webpack"
+		"eslint": "eslint ."
 	},
 	"main": "main.js",
 	"build": {
@@ -82,6 +83,7 @@
 		"qrcode-decoder": "0.1.2"
 	},
 	"devDependencies": {
+		"autoprefixer": "^10.2.6",
 		"electron": "^13.0.1",
 		"electron-builder": "^22.10.5",
 		"electron-packager": "^15.2.0",
@@ -94,6 +96,8 @@
 		"eslint-plugin-prettier": "^3.4.0",
 		"eslint-plugin-promise": "^5.1.0",
 		"eslint-plugin-standard": "^5.0.0",
-		"prettier": "^2.3.0"
+		"prettier": "^2.3.0",
+		"sass": "^1.34.0",
+		"tailwindcss": "2.1.2"
 	}
 }
