--- a/package.json
+++ b/package.json
@@ -98,5 +98,9 @@
 		"prettier": "^2.3.0",
 		"sass": "^1.34.0",
 		"tailwindcss": "2.1.2"
+	},
+	"engines": {
+		"node": ">=14.0.0",
+		"npm": ">=7.0.0"
 	}
 }
