--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
 	"name": "authme",
-	"version": "2.4.2",
+	"version": "2.5.0",
 	"description": "A simple 2FA app for desktop built with Electron and Node.js.",
 	"author": "Levminer",
 	"license": "GPL-3.0",
 	"scripts": {
 		"start": "electron .",
-		"package": "electron-packager . Authme --platform=win32,linux,darwin --arch=x64 --icon=img/icon.icns --out=build --overwrite",
 		"build": "electron-builder --publish=never --x64",
+		"build:df": "sass src/dragonfly@1.4.0.scss src/dragonfly@1.4.0.css --no-source-map",
+		"build:tw": "tailwindcss build src/tailwind@2.1.2.scss -o src/tailwind@2.1.2.css -c .tailwindrc.js --no-autoprefixer",
 		"lint": "eslint --fix .",
 		"eslint": "eslint ."
 	},
@@ -74,6 +75,7 @@
 		"auto-launch": "^5.0.5",
 		"bcryptjs": "^2.4.3",
 		"cryptr": "^6.0.2",
+		"electron-context-menu": "^3.1.0",
 		"electron-debug": "^3.2.0",
 		"electron-util": "^0.16.0",
 		"node-fetch": "^2.6.1",
@@ -81,18 +83,24 @@
 		"qrcode-decoder": "0.1.2"
 	},
 	"devDependencies": {
-		"electron": "^12.0.7",
+		"autoprefixer": "^10.2.6",
+		"electron": "^13.0.1",
 		"electron-builder": "^22.10.5",
-		"electron-packager": "^15.2.0",
-		"eslint": "^7.26.0",
+		"eslint": "^7.27.0",
 		"eslint-config-node": "^4.1.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-config-promise": "^2.0.2",
-		"eslint-config-standard": "^16.0.2",
+		"eslint-config-standard": "^16.0.3",
 		"eslint-plugin-node": "^11.1.0",
 		"eslint-plugin-prettier": "^3.4.0",
-		"eslint-plugin-promise": "^4.3.1",
+		"eslint-plugin-promise": "^5.1.0",
 		"eslint-plugin-standard": "^5.0.0",
-		"prettier": "^2.3.0"
+		"prettier": "^2.3.0",
+		"sass": "^1.34.0",
+		"tailwindcss": "2.1.2"
+	},
+	"engines": {
+		"node": ">=14.0.0",
+		"npm": ">=7.0.0"
 	}
 }
