--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
 	"name": "authme",
-	"version": "2.5.0",
+	"version": "2.6.0",
 	"description": "A simple 2FA app for desktop built with Electron and Node.js.",
 	"author": "Levminer",
 	"license": "GPL-3.0",
 	"scripts": {
 		"start": "electron .",
-		"build": "electron-builder --publish=never --x64",
+		"build": "electron-builder --publish=never --x64 | gnomon --type=elapsed-total --quiet",
+		"build:test": "electron-builder --publish=never --x64 --dir -c scripts/test-build.json | gnomon --type=elapsed-total --quiet",
 		"build:df": "sass src/dragonfly@1.4.0.scss src/dragonfly@1.4.0.css --no-source-map",
 		"build:tw": "tailwindcss build src/tailwind@2.1.2.scss -o src/tailwind@2.1.2.css -c .tailwindrc.js --no-autoprefixer",
 		"lint": "eslint --fix .",
@@ -17,6 +18,12 @@
 		"productName": "Authme",
 		"appId": "com.levminer.authme",
 		"asar": true,
+		"files": [
+			"!extract",
+			"!sample",
+			"!scripts",
+			"!.*"
+		],
 		"asarUnpack": [
 			"app/import/src/py/*",
 			"src/install.py",
@@ -84,9 +91,9 @@
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.2.6",
-		"electron": "^13.0.1",
-		"electron-builder": "^22.10.5",
-		"eslint": "^7.27.0",
+		"electron": "^13.1.2",
+		"electron-builder": "^22.11.7",
+		"eslint": "^7.28.0",
 		"eslint-config-node": "^4.1.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-config-promise": "^2.0.2",
@@ -95,9 +102,10 @@
 		"eslint-plugin-prettier": "^3.4.0",
 		"eslint-plugin-promise": "^5.1.0",
 		"eslint-plugin-standard": "^5.0.0",
-		"prettier": "^2.3.0",
-		"sass": "^1.34.0",
-		"tailwindcss": "2.1.2"
+		"gnomon": "^1.4.6",
+		"prettier": "^2.3.1",
+		"sass": "^1.34.1",
+		"tailwindcss": "^2.0.4"
 	},
 	"engines": {
 		"node": ">=14.0.0",
