Edit saved codes finalyze #101

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
 		"start": "electron .",
 		"build": "electron-builder --publish=never --x64 | gnomon --type=elapsed-total --quiet",
 		"build:test": "electron-builder --publish=never --x64 --dir -c scripts/test-build.json | gnomon --type=elapsed-total --quiet",
-		"build:df": "sass src/dragonfly@1.4.0.scss src/dragonfly@1.4.0.css --no-source-map",
-		"build:tw": "tailwindcss build src/tailwind@2.1.2.scss -o src/tailwind@2.1.2.css -c .tailwindrc.js --no-autoprefixer",
+		"build:df": "sass src/dragonfly@1.4.0.scss src/dragonfly@1.4.0.css --no-source-map --style compressed",
+		"build:tw": "tailwindcss build -i src/tailwind@2.1.2.scss -o src/tailwind@2.1.2.css -c .tailwindrc.js --no-autoprefixer --minify",
 		"lint": "eslint --fix .",
 		"eslint": "eslint ."
 	},
