--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -6,6 +6,6 @@ jobs:
         steps:
             - uses: actions/checkout@v2
             - name: Install modules
-              run: npm i
+              run: npm ci
             - name: Run Lint
               run: npm run eslint
