--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
 	"version": "2.6.0",
 	"tag": "2.6.0",
 	"release": "2010. July 6.",
-	"number": "alpha-210623.145239",
+	"number": "release-210623.145736",
 	"description": "A simple 2FA app for desktop built with Electron and Node.js.",
 	"author": "Levminer",
 	"license": "GPL-3.0",
 	"scripts": {
 		"start": "electron .",
 		"build": "electron-builder --publish=never --x64 | gnomon --type=elapsed-total --quiet",
+		"build:release": "node scripts/release-build.js && electron-builder --publish=never --x64 | gnomon --type=elapsed-total --quiet",
+		"build:alpha": "node scripts/alpha-build.js && electron-builder --publish=never --x64 | gnomon --type=elapsed-total --quiet",
 		"build:test": "electron-builder --publish=never --x64 --dir -c scripts/test-build.json | gnomon --type=elapsed-total --quiet",
 		"build:df": "sass src/dragonfly@1.4.0.scss src/dragonfly@1.4.0.css --no-source-map --style compressed",
 		"build:tw": "tailwindcss build -i src/tailwind@2.1.2.scss -o src/tailwind@2.1.2.css -c .tailwindrc.js --no-autoprefixer --minify",
