--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -16,6 +16,9 @@ jobs:
                       NAME: windows
         steps:
             - uses: actions/checkout@v2
+            - uses: actions/setup-node@v2
+              with:
+                node-version: '14'
             - name: Install modules
               run: npm ci
             - name: Run build
