--- a/.github/workflows/alpha-artifacts.yml
+++ b/.github/workflows/alpha-artifacts.yml
@@ -27,7 +27,7 @@ jobs:
               id: number
               uses: notiz-dev/github-action-json-property@release
               with: 
-                   path: 'package.json'
+                   path: 'build.json'
                    prop_path: 'number'
             - name: Upload Artifacts
               uses: actions/upload-artifact@v2
