--- a/.github/workflows/alpha-artifacts.yml
+++ b/.github/workflows/alpha-artifacts.yml
@@ -23,6 +23,21 @@ jobs:
               run: npm ci
             - name: Run build
               run: npm run build:alpha
+            - name: Get build number
+              id: number
+              uses: notiz-dev/github-action-json-property@release
+              with: 
+                   path: 'build.json'
+                   prop_path: 'number'
+            - name: Create and copy build file
+              run: |
+                cp build.json authme-${{steps.number.outputs.prop}}-${{matrix.NAME}}-x64-installer-portable.json
+                cp authme-${{steps.number.outputs.prop}}-${{matrix.NAME}}-x64-installer-portable.json /dist
+            - name: Upload build file
+              uses: actions/upload-artifact@v2
+              with:
+                  name: authme-${{steps.number.outputs.prop}}-${{matrix.NAME}}-x64-installer-portable.json
+                  path: dist
             - name: Upload Artifacts
               uses: actions/upload-artifact@v2
               with:
