--- a/.github/workflows/alpha-artifacts.yml
+++ b/.github/workflows/alpha-artifacts.yml
@@ -31,9 +31,9 @@ jobs:
                    prop_path: 'number'
             - name: Create and copy build file
               run: |
-                    mkdir build
+                    mkdir ~/build
                     cp build.json authme-${{steps.number.outputs.prop}}-${{matrix.NAME}}-x64-installer-portable.json
-                    cp authme-${{steps.number.outputs.prop}}-${{matrix.NAME}}-x64-installer-portable.json /build
+                    cp authme-${{steps.number.outputs.prop}}-${{matrix.NAME}}-x64-installer-portable.json ~/build
             - name: Upload build file
               uses: actions/upload-artifact@v2
               with:
@@ -45,4 +45,4 @@ jobs:
                   name: authme-latest-alpha-${{matrix.NAME}}-x64-installer-portable
                   path: |
                         dist
-                        build
+                        ~/build
