--- a/.github/workflows/alpha-artifacts.yml
+++ b/.github/workflows/alpha-artifacts.yml
@@ -32,7 +32,7 @@ jobs:
             - name: Upload build file
               uses: actions/upload-artifact@v2
               with:
-                  name: authme-${{steps.number.outputs.prop}}-${{matrix.NAME}}.json
+                  name: authme-${{steps.number.outputs.prop}}-${{matrix.NAME}}
                   path: build
             - name: Upload Artifacts
               uses: actions/upload-artifact@v2
