--- a/.github/workflows/release-artifacts.yml
+++ b/.github/workflows/release-artifacts.yml
@@ -23,6 +23,17 @@ jobs:
               run: npm ci
             - name: Run build
               run: npm run build:release
+            - name: Get build number
+              id: number
+              uses: notiz-dev/github-action-json-property@release
+              with: 
+                   path: 'build.json'
+                   prop_path: 'number'
+            - name: Upload build file
+              uses: actions/upload-artifact@v2
+              with:
+                  name: authme-${{steps.number.outputs.prop}}-${{matrix.NAME}}
+                  path: build
             - name: Upload Artifacts
               uses: actions/upload-artifact@v2
               with:
