--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"license": "GPL-3.0",
 	"scripts": {
 		"start": "node scripts/alpha-build.js && electron .",
+		"dev": "electron .",
 		"build": "electron-builder --publish=never --x64 | gnomon --type=elapsed-total --quiet",
 		"build:release": "node scripts/release-build.js && electron-builder --publish=never --x64 | gnomon --type=elapsed-total --quiet",
 		"build:alpha": "node scripts/alpha-build.js && electron-builder --publish=never --x64 | gnomon --type=elapsed-total --quiet",
@@ -21,7 +22,6 @@
 	"build": {
 		"productName": "Authme",
 		"appId": "com.levminer.authme",
-		"asar": true,
 		"files": [
 			"!extract",
 			"!sample",
