--- a/package.json
+++ b/package.json
@@ -89,16 +89,16 @@
 		"cryptr": "^6.0.2",
 		"electron-context-menu": "^3.1.1",
 		"electron-debug": "^3.2.0",
-		"electron-util": "^0.16.0",
+		"electron-util": "^0.17.0",
 		"node-fetch": "^2.6.1",
 		"qrcode": "^1.4.4",
 		"qrcode-decoder": "0.1.2"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.2.6",
-		"electron": "^13.1.4",
+		"electron": "^13.1.5",
 		"electron-builder": "^22.11.7",
-		"eslint": "^7.29.0",
+		"eslint": "^7.30.0",
 		"eslint-config-node": "^4.1.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-config-promise": "^2.0.2",
@@ -107,7 +107,7 @@
 		"eslint-plugin-prettier": "^3.4.0",
 		"eslint-plugin-promise": "^5.1.0",
 		"eslint-plugin-standard": "^5.0.0",
-		"gnomon": "^1.4.6",
+		"gnomon": "1.4.6",
 		"prettier": "^2.3.1",
 		"sass": "^1.35.1",
 		"tailwindcss": "2.2.2"
