--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
 		"build:release": "node scripts/release-build.js && electron-builder --publish=never --x64 | gnomon --type=elapsed-total --quiet",
 		"build:alpha": "node scripts/alpha-build.js && electron-builder --publish=never --x64 | gnomon --type=elapsed-total --quiet",
 		"build:test": "electron-builder --publish=never --x64 --dir -c scripts/test-build.json | gnomon --type=elapsed-total --quiet",
-		"build:df": "sass src/dragonfly@1.4.0.scss src/dragonfly@1.4.0.css --no-source-map --style compressed",
-		"build:tw": "tailwindcss build -i src/tailwind@2.2.2.scss -o src/tailwind@2.2.2.css -c .tailwindrc.js --no-autoprefixer --minify",
-		"watch:tw": "tailwindcss build -i src/tailwind@2.2.2.scss -o src/tailwind@2.2.2.css -c .tailwindrc.js --no-autoprefixer --minify --watch",
+		"build:df": "sass src/dragonfly.scss src/dragonfly.css --no-source-map --style compressed",
+		"build:tw": "tailwindcss build -i src/tailwind.scss -o src/tailwind@.css -c .tailwindrc.js --no-autoprefixer --minify",
+		"watch:tw": "tailwindcss build -i src/tailwind.scss -o src/tailwind@.css -c .tailwindrc.js --no-autoprefixer --minify --watch",
+		"timer": "node lib/timer.js",
 		"lint": "eslint --fix .",
 		"eslint": "eslint ."
 	},
@@ -91,12 +92,13 @@
 		"electron-debug": "^3.2.0",
 		"electron-util": "^0.17.0",
 		"node-fetch": "^2.6.1",
+		"protons": "^2.0.1",
 		"qrcode": "^1.4.4",
-		"qrcode-decoder": "0.1.2"
+		"qrcode-decoder": "^0.2.2"
 	},
 	"devDependencies": {
 		"autoprefixer": "^10.2.6",
-		"electron": "^13.1.5",
+		"electron": "^13.1.6",
 		"electron-builder": "^22.11.7",
 		"eslint": "^7.30.0",
 		"eslint-config-node": "^4.1.0",
@@ -110,7 +112,7 @@
 		"gnomon": "1.4.6",
 		"prettier": "^2.3.1",
 		"sass": "^1.35.1",
-		"tailwindcss": "2.2.2"
+		"tailwindcss": "^2.2.4"
 	},
 	"engines": {
 		"node": ">=15.0.0",
