--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "authme",
 	"version": "2.6.0",
 	"tag": "2.6.0",
-	"release": "2020. July 6.",
+	"release": "2020. July 13.",
 	"description": "A simple 2FA app for desktop built with Electron and Node.js.",
 	"author": "Levminer",
 	"license": "GPL-3.0",
@@ -14,8 +14,8 @@
 		"build:alpha": "node scripts/alpha-build.js && electron-builder --publish=never --x64 | gnomon --type=elapsed-total --quiet",
 		"build:test": "electron-builder --publish=never --x64 --dir -c scripts/test-build.json | gnomon --type=elapsed-total --quiet",
 		"build:df": "sass src/dragonfly.scss src/dragonfly.css --no-source-map --style compressed",
-		"build:tw": "tailwindcss build -i src/tailwind.scss -o src/tailwind@.css -c .tailwindrc.js --no-autoprefixer --minify",
-		"watch:tw": "tailwindcss build -i src/tailwind.scss -o src/tailwind@.css -c .tailwindrc.js --no-autoprefixer --minify --watch",
+		"build:tw": "tailwindcss build -i src/tailwind.scss -o src/tailwind.css -c .tailwindrc.js --no-autoprefixer --minify",
+		"watch:tw": "tailwindcss build -i src/tailwind.scss -o src/tailwind.css -c .tailwindrc.js --no-autoprefixer --minify --watch",
 		"timer": "node lib/timer.js",
 		"lint": "eslint --fix .",
 		"eslint": "eslint ."
