--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
 		"build": "electron-builder --publish=never --x64 | gnomon --type=elapsed-total --quiet",
 		"build:release": "node scripts/release-build.js && electron-builder --publish=never --x64 | gnomon --type=elapsed-total --quiet",
 		"build:alpha": "node scripts/alpha-build.js && electron-builder --publish=never --x64 | gnomon --type=elapsed-total --quiet",
-		"build:test": "electron-builder --publish=never --x64 --dir -c scripts/test-build.json | gnomon --type=elapsed-total --quiet",
+		"build:test": "node scripts/alpha-build.js && electron-builder --publish=never --x64 --dir -c scripts/test-build.json | gnomon --type=elapsed-total --quiet",
 		"build:df": "sass src/dragonfly.scss src/dragonfly.css --no-source-map --style compressed",
 		"build:tw": "tailwindcss build -i src/tailwind.scss -o src/tailwind.css -c .tailwindrc.js --no-autoprefixer --minify",
+		"watch:df": "sass src/dragonfly.scss src/dragonfly.css --no-source-map --style compressed --watch",
 		"watch:tw": "tailwindcss build -i src/tailwind.scss -o src/tailwind.css -c .tailwindrc.js --no-autoprefixer --minify --watch",
-		"timer": "node lib/timer.js",
 		"lint": "eslint --fix .",
 		"eslint": "eslint ."
 	},
@@ -97,7 +97,7 @@
 		"qrcode-decoder": "^0.2.2"
 	},
 	"devDependencies": {
-		"autoprefixer": "^10.2.6",
+		"autoprefixer": "^10.3.0",
 		"electron": "^13.1.6",
 		"electron-builder": "^22.11.7",
 		"eslint": "^7.30.0",
@@ -111,7 +111,7 @@
 		"eslint-plugin-standard": "^5.0.0",
 		"gnomon": "1.4.6",
 		"prettier": "^2.3.1",
-		"sass": "^1.35.1",
+		"sass": "^1.35.2",
 		"tailwindcss": "^2.2.4"
 	},
 	"engines": {
